--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-preprocess": "~4.0.0"
+    "grunt-preprocess": "~4.0.0",
+    "grunt-concurrent": "~0.4.3",
+    "grunt-nodemon": "~0.2.0"
   }
 }
