--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-preprocess": "~4.0.0",
-    "grunt-concurrent": "~0.4.3",
-    "grunt-nodemon": "~0.2.0"
+    "grunt-concurrent": "~0.4.3"
   }
 }
